--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -8,7 +8,7 @@
   "personal": "Cá nhân",
   "noData": "Không có dữ liệu",
   "myScores": "Điểm của tôi",
-  "featureSoon": "Tính năng này sẽ sớm thành công",
+  "featureSoon": "Tính năng này sẽ sớm ra mắt",
   "createTodo": "Tạo việc làm",
   "title": "Tiêu đề",
   "setDate": "Đặt ngày",
