update setting dialog

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -16,6 +16,9 @@
  "note": "Note",
  "save": "Save",
  "language": "Language",
+ "notification": "Notification",
+ "turnOn": "Turn On",
+ "turnOff": "Turn Off",
  "aboutUs": "About Us",
  "rateMe": "Rate me",
  "logOut": "Log out",
