--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -16,6 +16,9 @@
   "note": "Ghi chú",
   "save": "Lưu",
   "language": "Ngôn ngữ",
+  "notification": "Thông báo",
+  "turnOn": "Cho phép thông báo",
+  "turnOff": "Không thông báo",
   "aboutUs": "Liên hệ",
   "rateMe": "Đánh giá",
   "logOut": "Đăng xuất",
