add introduction screen

--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -34,5 +34,7 @@
   "createSuccess": "Tạo thành công",
   "createFailed": "Tạo thất bại",
   "dataTryAgain": "Không có dữ liệu. Thử lại",
-  "connectionFailed": "Kết nối thất bại"
+  "connectionFailed": "Kết nối thất bại",
+  "ok": "OK",
+  "introduction":"Nếu bạn có tài khoản sinh viên KMA, hãy đăng nhập tại màn hình profile để cập nhật lịch học của bạn"
 }
