--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -34,6 +34,8 @@
  "createSuccess": "Create Success",
  "createFailed": "Create Failed",
  "dataTryAgain": "No Data. Try again",
- "connectionFailed": "Connection Failed"
+ "connectionFailed": "Connection Failed",
+ "ok": "OK",
+ "introduction":"If you have a KMA student account, please log in at the profile screen to update your schedule"
 }
 
