--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -36,6 +36,7 @@
  "dataTryAgain": "No Data. Try again",
  "connectionFailed": "Connection Failed",
  "ok": "OK",
- "introduction":"If you have a KMA student account, please log in at the profile screen to update your schedule"
+ "introduction":"If you have a KMA student account, please log in at the profile screen to update your schedule",
+ "permissonApp": "You need to grant permission to the app!!"
 }
 
