--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -36,5 +36,14 @@
   "dataTryAgain": "Không có dữ liệu. Thử lại",
   "connectionFailed": "Kết nối thất bại",
   "ok": "OK",
-  "introduction":"Nếu bạn có tài khoản sinh viên KMA, hãy đăng nhập tại màn hình profile để cập nhật lịch học của bạn"
+  "introduction":"Nếu bạn có tài khoản sinh viên KMA, hãy đăng nhập tại màn hình profile để cập nhật lịch học của bạn",
+  "componentScore1": "Điểm thành phần 1",
+  "componentScore2": "Điểm thành phần 2",
+  "finalTermScore": "Điểm cuối kì",
+  "grade": "Lớp: ",
+  "subject": "Môn học: ",
+  "credits": "Số tín chỉ: ",
+  "addScore": "Thêm điểm",
+  "updateSubject": "Cập nhật môn học mới",
+  "calculateScore": "Tính điểm của bạn"
 }
