(UI) choose subject and (logic) calculate score

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -44,7 +44,8 @@
  "subject": "Subject: ",
  "credits": "Credits: ",
  "addScore": "Add New Score",
- "updateSubject": "Update New Subjects",
- "calculateScore": "Calculate your score"
+ "updateSubject": "(Update New Subjects)",
+ "calculateScore": "Calculate your score",
+ "chooseSubject": "Choose Subject"
 }
 
