--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -42,11 +42,16 @@
  "componentScore2": "Component Score 2",
  "finalTermScore": "Final Term Score",
  "grade": "Class: ",
- "subject": "Subject: ",
- "credits": "Credits: ",
+ "subject": "Subject",
+ "credits": "Credits",
  "addScore": "Add New Score",
  "updateSubject": "(Update New Subjects)",
  "calculateScore": "Calculate your score",
- "chooseSubject": "Choose Subject"
+ "chooseSubject": "Choose Subject",
+ "score": "Score",
+ "p10PointGradingScale": "10-point Grading Scale",
+ "p4PointGradingScale": "4-point Grading Scale",
+ "letterGrade": "Letter Grade",
+ "introInScoreScreen": "If you have a KMA student account, please log in at the profile screen to use this feature"
 }
 
