--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -22,6 +22,7 @@
  "aboutUs": "About Us",
  "rateMe": "Rate me",
  "logOut": "Log out",
+ "deleteAccount": "Delete Account",
  "editTodo": "Edit todo",
  "doYouWant": "Do you want to ",
   "yes": "Yes",
