--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -22,6 +22,7 @@
   "aboutUs": "Liên hệ",
   "rateMe": "Đánh giá",
   "logOut": "Đăng xuất",
+  "deleteAccount": "Xóa tài khoản",
   "editTodo": "Sửa ghi chú",
   "doYouWant": "Bạn có muốn ",
   "yes": "Có",
